Adicionado visualização discentes_imd_graduacao

--- a/Probabilidade.ipynb
+++ b/Probabilidade.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "(9084, 16)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "15  UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "(1518, 16)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,6 +306,196 @@
     "# Filtragem por docentes do nivel de ensino graduação\n",
     "discentes_imd_graduacao = imd_discentes.loc[(imd_discentes['nivel_ensino'] == 'GRADUAÇÃO')]\n",
     "discentes_imd_graduacao.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>matricula</th>\n",
+       "      <th>nome_discente</th>\n",
+       "      <th>ano_ingresso</th>\n",
+       "      <th>periodo_ingresso</th>\n",
+       "      <th>forma_ingresso</th>\n",
+       "      <th>tipo_discente</th>\n",
+       "      <th>status</th>\n",
+       "      <th>sigla_nivel_ensino</th>\n",
+       "      <th>nivel_ensino</th>\n",
+       "      <th>id_curso</th>\n",
+       "      <th>nome_curso</th>\n",
+       "      <th>modalidade_educacao</th>\n",
+       "      <th>id_unidade</th>\n",
+       "      <th>nome_unidade</th>\n",
+       "      <th>id_unidade_gestora</th>\n",
+       "      <th>nome_unidade_gestora</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>2.013020e+09</td>\n",
+       "      <td>ADEMIR BEZERRA DA SILVA JUNIOR</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>VESTIBULAR</td>\n",
+       "      <td>REGULAR</td>\n",
+       "      <td>CONCLUÍDO</td>\n",
+       "      <td>G</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>92127264.0</td>\n",
+       "      <td>TECNOLOGIA DA INFORMAÇÃO</td>\n",
+       "      <td>PRESENCIAL</td>\n",
+       "      <td>6069.0</td>\n",
+       "      <td>INSTITUTO METROPOLE DIGITAL</td>\n",
+       "      <td>605.0</td>\n",
+       "      <td>UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>2.013056e+09</td>\n",
+       "      <td>ADONIAS GALVÃO FILHO</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SiSU</td>\n",
+       "      <td>REGULAR</td>\n",
+       "      <td>ATIVO</td>\n",
+       "      <td>G</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>92127264.0</td>\n",
+       "      <td>TECNOLOGIA DA INFORMAÇÃO</td>\n",
+       "      <td>PRESENCIAL</td>\n",
+       "      <td>6069.0</td>\n",
+       "      <td>INSTITUTO METROPOLE DIGITAL</td>\n",
+       "      <td>605.0</td>\n",
+       "      <td>UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>490</th>\n",
+       "      <td>2.013047e+09</td>\n",
+       "      <td>ALESON BELO DA SILVA</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SiSU</td>\n",
+       "      <td>REGULAR</td>\n",
+       "      <td>CANCELADO</td>\n",
+       "      <td>G</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>92127264.0</td>\n",
+       "      <td>TECNOLOGIA DA INFORMAÇÃO</td>\n",
+       "      <td>PRESENCIAL</td>\n",
+       "      <td>6069.0</td>\n",
+       "      <td>INSTITUTO METROPOLE DIGITAL</td>\n",
+       "      <td>605.0</td>\n",
+       "      <td>UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>596</th>\n",
+       "      <td>2.013042e+09</td>\n",
+       "      <td>ALEXANDRE TADEU DE FIGUEIREDO AZEVEDO</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>SiSU</td>\n",
+       "      <td>REGULAR</td>\n",
+       "      <td>CANCELADO</td>\n",
+       "      <td>G</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>92127264.0</td>\n",
+       "      <td>TECNOLOGIA DA INFORMAÇÃO</td>\n",
+       "      <td>PRESENCIAL</td>\n",
+       "      <td>6069.0</td>\n",
+       "      <td>INSTITUTO METROPOLE DIGITAL</td>\n",
+       "      <td>605.0</td>\n",
+       "      <td>UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>622</th>\n",
+       "      <td>2.013051e+09</td>\n",
+       "      <td>ALEXIS JORDÃO GONÇALVES PEREIRA</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>VESTIBULAR</td>\n",
+       "      <td>REGULAR</td>\n",
+       "      <td>CONCLUÍDO</td>\n",
+       "      <td>G</td>\n",
+       "      <td>GRADUAÇÃO</td>\n",
+       "      <td>92127264.0</td>\n",
+       "      <td>TECNOLOGIA DA INFORMAÇÃO</td>\n",
+       "      <td>PRESENCIAL</td>\n",
+       "      <td>6069.0</td>\n",
+       "      <td>INSTITUTO METROPOLE DIGITAL</td>\n",
+       "      <td>605.0</td>\n",
+       "      <td>UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        matricula                          nome_discente  ano_ingresso  \\\n",
+       "80   2.013020e+09         ADEMIR BEZERRA DA SILVA JUNIOR          2013   \n",
+       "122  2.013056e+09                   ADONIAS GALVÃO FILHO          2013   \n",
+       "490  2.013047e+09                   ALESON BELO DA SILVA          2013   \n",
+       "596  2.013042e+09  ALEXANDRE TADEU DE FIGUEIREDO AZEVEDO          2013   \n",
+       "622  2.013051e+09        ALEXIS JORDÃO GONÇALVES PEREIRA          2013   \n",
+       "\n",
+       "     periodo_ingresso forma_ingresso tipo_discente     status  \\\n",
+       "80                1.0     VESTIBULAR       REGULAR  CONCLUÍDO   \n",
+       "122               1.0           SiSU       REGULAR      ATIVO   \n",
+       "490               1.0           SiSU       REGULAR  CANCELADO   \n",
+       "596               1.0           SiSU       REGULAR  CANCELADO   \n",
+       "622               1.0     VESTIBULAR       REGULAR  CONCLUÍDO   \n",
+       "\n",
+       "    sigla_nivel_ensino nivel_ensino    id_curso                nome_curso  \\\n",
+       "80                   G    GRADUAÇÃO  92127264.0  TECNOLOGIA DA INFORMAÇÃO   \n",
+       "122                  G    GRADUAÇÃO  92127264.0  TECNOLOGIA DA INFORMAÇÃO   \n",
+       "490                  G    GRADUAÇÃO  92127264.0  TECNOLOGIA DA INFORMAÇÃO   \n",
+       "596                  G    GRADUAÇÃO  92127264.0  TECNOLOGIA DA INFORMAÇÃO   \n",
+       "622                  G    GRADUAÇÃO  92127264.0  TECNOLOGIA DA INFORMAÇÃO   \n",
+       "\n",
+       "    modalidade_educacao  id_unidade                 nome_unidade  \\\n",
+       "80           PRESENCIAL      6069.0  INSTITUTO METROPOLE DIGITAL   \n",
+       "122          PRESENCIAL      6069.0  INSTITUTO METROPOLE DIGITAL   \n",
+       "490          PRESENCIAL      6069.0  INSTITUTO METROPOLE DIGITAL   \n",
+       "596          PRESENCIAL      6069.0  INSTITUTO METROPOLE DIGITAL   \n",
+       "622          PRESENCIAL      6069.0  INSTITUTO METROPOLE DIGITAL   \n",
+       "\n",
+       "     id_unidade_gestora                         nome_unidade_gestora  \n",
+       "80                605.0  UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE  \n",
+       "122               605.0  UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE  \n",
+       "490               605.0  UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE  \n",
+       "596               605.0  UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE  \n",
+       "622               605.0  UNIVERSIDADE FEDERAL DO RIO GRANDE DO NORTE  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "discentes_imd_graduacao.head()"
    ]
   }
  ],
