Adicionado introdução e objetivo

--- a/Análise discentes do BTI.ipynb
+++ b/Análise discentes do BTI.ipynb
@@ -4,7 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Importando as bibliotecas"
+    "# Análise das discentes do BTI autodeclaradas do sexo feminino.\n",
+    "\n",
+    "### Introdução\n",
+    "\n",
+    "Recentemente vem ganhando a grande mídia a pequena inserção de mulheres no mercado e cursos de TI,\n",
+    "no ultimo dia 13 de abril o jornal [BBC Brasil](http://www.bbc.com/portuguese/geral-43592581) divulgou a matéria onde mostra que no inicio da década de 1970 tínhamos um número maior de mulheres nos cursos de informática, tanto no Brasil como no exterior. A mesma matéria cita nomes como Ada Lovelace, criadora do que hoje e considerado o primeiro algoritmo, e Mary Kenneth Keller, uma freira americana, que teve papel importante na criação da linguagem de programação BASIC.\n",
+    "\n",
+    "No site [oul](https://uolhost.uol.com.br/academia/noticias/tecnologia/2015/08/25/a-dificil-missao-de-ser-mulher-no-mercado-de-ti.html#rmcl) análisa o levantamento recente da Pesquisa Nacional por Amostra de Domicílios (PNAD), mostra que hoje temos um total de 580 mil profissionais de TI atuando no Brasil, e apenas 20% são mulheres. O levantamento da PNAD ainda mostra que cerca de 79% das mulheres que ingressão em cursos relacionados a TI abandoam o curso no primeiro ano.\n",
+    "Para quem esta familiarizado com o mercado de TI esses números podem não ser novidades, porem quando\n",
+    "quantificamos essa realidade se tem maior noção sobre a disparidade entre os gêneros, isto que\n",
+    "tentaremos demonstra na conclusão dessa análise.\n",
+    "\n",
+    "### Objetivo\n",
+    "\n",
+    "Realizar análise do gênero feminino no curso de BTI, assim como sua análise sócio econômico das\n",
+    "mesmas.\n",
+    "\n",
+    "*** Referência extra: ***\n",
+    "\n",
+    "[Histórias de Ninar Para Garotas Rebeldes](http://www.b9.com.br/90743/historias-de-ninar-para-garotas-rebeldes-margaret-hamilton-lido-por-sarah-oliveira/) - Historia de Margaret Hamilton narrado por Sarah Oliveira"
    ]
   },
   {
@@ -13,17 +32,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importação das bibliotecas\n",
+    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Tabelas importadas do site  http://dados.ufrn.br/group/ensino"
    ]
   },
   {
@@ -32,6 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Tabelas importadas do site  http://dados.ufrn.br/group/ensino\n",
     "#Dados sócio-econômicos dos discentes\n",
     "\n",
     "url_socio_2013_1 = 'https://bit.ly/2IwDSvE'\n",
@@ -65,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Leitura de csv "
+    "# Leitura de csv e limpeza de dados"
    ]
   },
   {
